# ImpactMesh

./: README.md  pyproject.toml
configs/: terramind_v1_base_impactmesh_fire.yaml  terramind_v1_base_impactmesh_flood.yaml  terramind_v1_tiny_impactmesh_fire.yaml  terramind_v1_tiny_impactmesh_flood.yaml
impactmesh/: impactmesh_datamodule.py  impactmesh_dataset.py  plotting_utils.py  run_inference.py
